backup/customer1.tar.gz/iptables
# Generated by iptables-save v1.3.5 on Wed Apr 25 18:52:02 2012
*filter
:INPUT DROP [20016:2556964]
:FORWARD DROP [610478:43022710]
:OUTPUT ACCEPT [1587916:746602432]
:syn-flood - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A INPUT -s 127.0.89.1 -p tcp -m multiport --dports 1415,4949 -j ACCEPT 
-A INPUT -s 127.0.0.213 -j ACCEPT -A INPUT -s 127.0.0.147 -j ACCEPT 
-A INPUT -s 127.0.109.1 -p tcp -m multiport --dports 9101,9102,9103 -j ACCEPT 
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A FORWARD -p icmp -m icmp --icmp-type 8 -j ACCEPT 
-A FORWARD -d 127.0.89.1 -p udp -m multiport --dports 123,514 -j ACCEPT 
-A FORWARD -d 10.171.1.10 -p tcp -m tcp --dport 25 -j ACCEPT 
-A FORWARD -s 127.0.81.1 -d 127.0.82.1 -p tcp -m tcp --dport 1521 -j ACCEPT 
-A FORWARD -s 127.0.81.2 -d 127.0.82.1 -p tcp -m tcp --dport 1521 -j ACCEPT 
-A FORWARD -s 127.0.82.1 -d 127.0.0.247 -j ACCEPT 
-A FORWARD -s 127.0.82.1 -d 127.0.204.15 -p tcp -m tcp --dport 22 -j ACCEPT 
-A FORWARD -s 127.0.0.127 -j ACCEPT 
-A FORWARD -s 127.0.0.105 -j ACCEPT 
-A FORWARD -s 127.0.0.191 -j ACCEPT 
-A FORWARD -s 127.0.0.17 -j ACCEPT 
-A FORWARD -s 127.0.0.111 -j ACCEPT 
-A FORWARD -s 10.20.50.4 -j ACCEPT 
-A FORWARD -s 10.20.50.22 -j ACCEPT 
-A FORWARD -s 10.253.253.140 -j ACCEPT 
-A FORWARD -s 10.253.253.141 -j ACCEPT 
-A syn-flood -m limit --limit 5/sec --limit-burst 50 -j RETURN 
-A syn-flood -j LOG --log-prefix "SYN flood: " 
COMMIT
# Completed on Wed Apr 25 18:52:02 2012
# Generated by iptables-save v1.3.5 on Wed Apr 25 18:52:02 2012
*nat
:PREROUTING ACCEPT [1481775:163252322]
:POSTROUTING ACCEPT [523199:28347893]
:OUTPUT ACCEPT [123350:7925473]
-A POSTROUTING -d 127.0.200.11 -p tcp -m tcp --dport 24930 -j SNAT --to-source 172.17.171.100 
COMMIT
# Completed on Wed Apr 25 18:52:02 2012
# Generated by iptables-save v1.3.5 on Wed Apr 25 18:52:02 2012
*mangle
:PREROUTING ACCEPT [96679318:88647750757]
:INPUT ACCEPT [808484:369403992]
:FORWARD ACCEPT [95478259:88184825604]
:OUTPUT ACCEPT [1587916:746602432]
:POSTROUTING ACCEPT [96455953:88888449118]
COMMIT
# Completed on Wed Apr 25 18:52:02 2012
